fix gap under menu and under project selector

--- a/src/components/Menu/index.module.css
+++ b/src/components/Menu/index.module.css
@@ -44,6 +44,10 @@
     width: 100vw;
     height: 100vh;
     overflow: visible;
+    pointer-events: none;
+}
+.isOpen { 
+    pointer-events: unset;
 }
 
 .mobileMenuContainer {
