--- a/src/components/ProjectsSelector/index.module.css
+++ b/src/components/ProjectsSelector/index.module.css
@@ -1,4 +1,6 @@
 .container {
+    position: relative;
+    right: -10px;
     display: flex;
     gap: 1rem;
     margin-top: .75rem;
@@ -26,6 +28,7 @@
 
 .select {
     margin-top: 2px;
+    margin-right: .75rem;
     min-width: 150px;
     display: flex;
     justify-content: flex-end;
